added examples for chartjs-chart-matrix and d3
Signed-off-by: Klaus Strießnig <k.striessnig@gmail.com>

--- a/bridge/client/app/_components/apex-chart/apex-chart.component.html
+++ b/bridge/client/app/_components/apex-chart/apex-chart.component.html
@@ -4,5 +4,5 @@
   [plotOptions]="plotOptions"
   [dataLabels]="dataLabels"
   [tooltip]="tooltip"
-  [xaxis]="xaxis"
+  [annotations]="annotations"
 ></apx-chart>
